# w-cli

./: Cargo.toml  LICENSE  README.md
docs/examples/: README.md
w-cli/: Cargo.toml
w-cli/src/: lib.rs  main.rs  place.rs  temp.rs  weather.rs
