[package]
name = "w-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient-weather-api = "0.1.1"
serde = {version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.18", features = ["json"] }